--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,9 +26,8 @@ requirements:
     - zlib
     - snappy
     - libprotobuf
+    - libprotobuf-static
     - lz4-c
-  run:
-    - libprotobuf
 
 test:
   commands:
