--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,10 +11,14 @@ source:
     # ORC builds by default with -Werror but some dependencies omit warnings.
     # This deactivates -Werror
     - 0001-Deactivate-aggressive-failures-on-warnings.patch
+    - 0002-Partially-rework-cmake-modules-to-accommodate-librar.patch
+    - 0003-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
 
 build:
   number: 0
   skip: true  # [win]
+  # run_exports:
+  # https://github.com/lvc/upstream-tracker/issues/88
 
 requirements:
   build:
@@ -27,12 +31,14 @@ requirements:
     - snappy
     - libprotobuf
     - lz4-c
+    - zstd
   run:
     - libprotobuf
 
 test:
   commands:
-    - test -f $PREFIX/lib/liborc.a  # [unix]
+    - test -f $PREFIX/lib/liborc${SHLIB_EXT}  # [unix]
+    - test -f $PREFIX/include/orc/Common.hh   # [unix]
 
 about:
   home: http://github.com/apache/orc
