--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,21 +1,23 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
+- '10'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '7'
-docker_image:
-- condaforge/linux-anvil-comp7
+- '10'
 libprotobuf:
 - '3.12'
 lz4_c:
 - 1.9.2
+macos_machine:
+- x86_64-apple-darwin13.4.0
 pin_run_as_build:
   lz4-c:
     max_pin: x.x.x
@@ -23,5 +25,9 @@ pin_run_as_build:
     max_pin: x.x
 snappy:
 - '1'
+target_platform:
+- osx-64
 zlib:
 - '1.2'
+zstd:
+- '1.4'
