--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
     - patches/0001-Deactivate-aggressive-failures-on-warnings.patch
     - patches/0002-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
     - patches/0003-CMake-Add-more-hints-for-libraries-on-Windows.patch
+    - patches/0004-don-t-force-lib-destination.patch
 
 build:
   number: 2
