Backport https://github.com/apache/orc/commit/286992e1

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
     - patches/0002-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
     - patches/0003-CMake-Add-more-hints-for-libraries-on-Windows.patch
     - patches/0004-don-t-force-lib-destination.patch
+    - patches/0005-ORC-1301-C-Enforce-C-17.patch
 
 build:
   number: 1
