Check for protobuf config based module

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
     - patches/0003-CMake-Add-more-hints-for-libraries-on-Windows.patch
     - patches/0004-don-t-force-lib-destination.patch
     - patches/0005-ORC-1301-C-Enforce-C-17.patch
+    - patches/0006-Check-for-protobuf-config-based-module.patch
 
 build:
   number: 1
