--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -13,7 +13,7 @@ c_stdlib_version:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge orc_dev
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -25,7 +25,7 @@ lz4_c:
 macos_machine:
 - arm64-apple-darwin20.0.0
 orc:
-- 2.0.3
+- 2.1.0
 snappy:
 - '1.2'
 target_platform:
