--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,13 +8,13 @@ source:
   url: https://archive.apache.org/dist/orc/orc-{{ version }}/orc-{{ version }}.tar.gz
   sha256: 69d45665bfb5699b709094ba630ae4b186b19e083c4438855fc29c77125c149c
   patches:
+    # diff from 2.1.0 to head of `branch-2.1`: https://github.com/apache/orc/commit/0ee235c2d92096155aaaebf87c3daf94be46882e
+    - patches/0001-combined-patch-until-https-github.com-apache-orc-com.patch
     - patches/0001-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
     - patches/0002-Allow-user-to-override-path-to-protoc.patch
-    # backport https://github.com/apache/orc/pull/2108
-    - patches/0003-ORC-1833-C-Fix-CMake-script-to-be-used-inside-anothe.patch
 
 build:
-  number: 1
+  number: 2
   run_exports:
     - {{ pin_subpackage("orc", max_pin="x.x.x") }}
 
