--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
     - patches/0001-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
     - patches/0002-Allow-user-to-override-path-to-protoc.patch
     - patches/0003-add-missing-include-for-protobuf-types.patch
+    - patches/0004-Fix-case-for-byteswap-functions.patch
 
 build:
   number: 0
