--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
   git_rev: fetch_content
   patches:
     - patches/0001-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
+    - patches/0002-Allow-user-to-override-path-to-protoc.patch
 
 build:
   number: 2
