--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,11 +5,10 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/wgtmac/orc.git
-  git_rev: fetch_content
+  git_url: https://github.com/apache/orc.git
+  git_rev: main
   patches:
     - patches/0001-Don-t-force-orc-to-be-a-static-library-let-end-user-.patch
-    - patches/0002-Allow-user-to-override-path-to-protoc.patch
 
 build:
   number: 2
